--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/pyBlast"]
 	path = src/pyBlast
-	url = https://github.com/a-slide/pyBlast.git
+	url = https://github.com/emlec/pyBlast.git
